// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildTimingBlock > generates timing block for Year 1 / 50 min lesson 1`] = `
"## Timing Context
Schedule: 50-minute period | Room type: THEORY | MYP Year 1 (avg age 11)
Usable time: **47 minutes** (after 3 min transition)
Lesson type: general → using **Workshop Model** structure

CRITICAL: Generate activities that sum to 47 minutes. Do NOT generate 50 minutes of content.


## LESSON STRUCTURE — WORKSHOP MODEL
Every lesson follows the 4-Phase Workshop Model.

### Phase 1: OPENING (5-10 min)
Hook, context, connect to prior learning. Set expectations for the session.
Activate curiosity — a compelling question, image, or problem.

### Phase 2: MINI-LESSON (max 12 min — the "1 + age" rule)
Teach ONE skill or concept. Demonstrate a technique. Short and focused.
Maximum 12 minutes of direct instruction (1 + avg student age of 11).
After 12 minutes, student attention drops sharply. Stop teaching and start working.

### Phase 3: WORK TIME (minimum 21 min, ideally 28+ min — at least 45% of usable time)
THE MAIN EVENT. Students create, research, prototype, test, build.
This is ONE sustained block — do NOT fragment it into multiple small activities.
Teacher circulates: 1-on-1 conferences, formative assessment, just-in-time teaching.


### Phase 4: DEBRIEF (5-10 min — NON-NEGOTIABLE, never skip)
Structured reflection using a protocol (quick-share, I Like/I Wish, exit ticket, two stars & a wish).

Time budget: Opening (5-10) + Mini-Lesson (max 12) + Work Time (21-28+) + Debrief (5-10) = 47 min

## workshopPhases Mapping
The workshopPhases object uses 4 fixed role-based slots: \`opening\`, \`miniLesson\`, \`workTime\`, \`debrief\`.
For the **Workshop Model** structure, map the phases as follows:
- \`opening\` → phaseName: "Opening"
- \`miniLesson\` → phaseName: "Mini-Lesson"
- \`workTime\` → phaseName: "Work Time" (main block)
- \`debrief\` → phaseName: "Debrief"
You MUST set the \`phaseName\` field on each workshopPhases slot to match the names above. The slot keys (opening/miniLesson/workTime/debrief) are structural — \`phaseName\` is what the teacher sees.

## Age-Appropriate Pacing
Age 11 (typically Year 1): Students sustain cognitive focus for ~10-12 minutes but can engage in hands-on making for much longer. Reading, writing, and analysis tasks must be SHORT (≤12 min) and heavily scaffolded with checklists, sentence starters, and worked examples. Hands-on/making activities can run 20-40 min as long as they have clear checkpoints. Break reading-heavy tasks into small chunks with partner discussion between them.

Activity duration limits for MYP Year 1:
- Direct instruction / demonstration: max 12 min (1+age rule, then switch to student work)
- Independent making / prototyping: max 40 min (with checkpoints every 12 min)
- Digital work / CAD / research: max 15 min
- Critique / gallery walk / peer review: max 15 min
- Closing reflection: 3-10 min (always at end)

Energy sequencing rules:
- Never place two high-cognitive activities back-to-back
- Workshop making can follow theory (welcome shift)
- Theory should NOT follow long workshop (students are physically tired)
- Critique/gallery walk works best mid-lesson after students have work to show
- Always end with a closing reflection — it's the last thing students do before leaving

## EXTENSIONS (REQUIRED)
For EVERY lesson, generate 2-3 extension activities for students who finish early.
Extensions must match the current design phase:
- Investigation phase: deepen research (more interviews, competitor analysis, accessibility audit)
- Ideation phase: push creativity (SCAMPER on top concept, constraint variation, rapid prototype 3 versions)
- Prototyping phase: explore alternatives (different materials, scale variation, user testing with different demographic)
- Evaluation phase: increase rigor (edge-case testing, cross-cohort comparison, sustainability analysis)
Extensions are NOT extra work. They are productive deepening of the same design challenge.
Format: Include an "extensions" array on each lesson with 2-3 items: { "title": "...", "description": "...", "durationMinutes": N }"
`;

exports[`buildTimingBlock > generates timing block for Year 5 / 60 min lesson 1`] = `
"## Timing Context
Schedule: 60-minute period | Room type: THEORY | MYP Year 5 (avg age 15)
Usable time: **57 minutes** (after 3 min transition)
Lesson type: general → using **Workshop Model** structure

CRITICAL: Generate activities that sum to 57 minutes. Do NOT generate 60 minutes of content.


## LESSON STRUCTURE — WORKSHOP MODEL
Every lesson follows the 4-Phase Workshop Model.

### Phase 1: OPENING (5-10 min)
Hook, context, connect to prior learning. Set expectations for the session.
Activate curiosity — a compelling question, image, or problem.

### Phase 2: MINI-LESSON (max 16 min — the "1 + age" rule)
Teach ONE skill or concept. Demonstrate a technique. Short and focused.
Maximum 16 minutes of direct instruction (1 + avg student age of 15).
After 16 minutes, student attention drops sharply. Stop teaching and start working.

### Phase 3: WORK TIME (minimum 26 min, ideally 34+ min — at least 45% of usable time)
THE MAIN EVENT. Students create, research, prototype, test, build.
This is ONE sustained block — do NOT fragment it into multiple small activities.
Teacher circulates: 1-on-1 conferences, formative assessment, just-in-time teaching.


### Phase 4: DEBRIEF (5-10 min — NON-NEGOTIABLE, never skip)
Structured reflection using a protocol (quick-share, I Like/I Wish, exit ticket, two stars & a wish).

Time budget: Opening (5-10) + Mini-Lesson (max 16) + Work Time (26-34+) + Debrief (5-10) = 57 min

## workshopPhases Mapping
The workshopPhases object uses 4 fixed role-based slots: \`opening\`, \`miniLesson\`, \`workTime\`, \`debrief\`.
For the **Workshop Model** structure, map the phases as follows:
- \`opening\` → phaseName: "Opening"
- \`miniLesson\` → phaseName: "Mini-Lesson"
- \`workTime\` → phaseName: "Work Time" (main block)
- \`debrief\` → phaseName: "Debrief"
You MUST set the \`phaseName\` field on each workshopPhases slot to match the names above. The slot keys (opening/miniLesson/workTime/debrief) are structural — \`phaseName\` is what the teacher sees.

## Age-Appropriate Pacing
Age 15 (typically Year 5 or GCSE Year 11): Cognitive focus ~16 minutes (1+age rule). Support extended independent work with clear success criteria. Scaffold through exemplars and peer critique rather than templates. Students can manage longer analysis and documentation tasks.

Activity duration limits for MYP Year 5:
- Direct instruction / demonstration: max 16 min (1+age rule, then switch to student work)
- Independent making / prototyping: max 45 min (with checkpoints every 15 min)
- Digital work / CAD / research: max 30 min
- Critique / gallery walk / peer review: max 25 min
- Closing reflection: 3-10 min (always at end)

Energy sequencing rules:
- Never place two high-cognitive activities back-to-back
- Workshop making can follow theory (welcome shift)
- Theory should NOT follow long workshop (students are physically tired)
- Critique/gallery walk works best mid-lesson after students have work to show
- Always end with a closing reflection — it's the last thing students do before leaving

## EXTENSIONS (REQUIRED)
For EVERY lesson, generate 2-3 extension activities for students who finish early.
Extensions must match the current design phase:
- Investigation phase: deepen research (more interviews, competitor analysis, accessibility audit)
- Ideation phase: push creativity (SCAMPER on top concept, constraint variation, rapid prototype 3 versions)
- Prototyping phase: explore alternatives (different materials, scale variation, user testing with different demographic)
- Evaluation phase: increase rigor (edge-case testing, cross-cohort comparison, sustainability analysis)
Extensions are NOT extra work. They are productive deepening of the same design challenge.
Format: Include an "extensions" array on each lesson with 2-3 items: { "title": "...", "description": "...", "durationMinutes": N }"
`;
